# TokenOptimizer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md  config.example.toml  skills.md
src/: lib.rs  main.rs
src/agents/: local.rs  mod.rs
src/api/: client.rs  mod.rs  request.rs  response.rs  sse.rs  streaming.rs  venice.rs
src/cache/: mod.rs  strategy.rs  tracker.rs
src/config/: mod.rs
src/metrics/: mod.rs
src/optimization/: mod.rs  strategies.rs
src/orchestrator/: mod.rs  session.rs
src/tui/: commands.rs  mod.rs  prompt.rs  renderer.rs  spinner.rs  theme.rs
