[package]
name = "token_optimizer"
version = "0.1.0"
edition = "2021"
description = "Coordinate code agents with focus on minimizing token consumption"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for API calls (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI interface
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tokenization (for counting tokens)
tiktoken-rs = "0.5"

# Configuration
toml = "0.8"
dirs = "5"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
